[metadata]
name = daxmod
version = 0.1.5
author = Ahmed Tchagnaou
author_email = ahmed.tchagnaou@etu.univ-tours.fr
description = Daxmod. A python toolbox for text classification
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, text classification
url = https://github.com/Authentic10/daxmod
download_url = https://pypi.org/project/daxmod
project_urls =
    Bug Tracker = https://github.com/Authentic10/daxmod/issues
license = BSD 2-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    License :: OSI Approved :: BSD License
    

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    joblib>=1.1.0
    numpy>=1.21.4
    pandas>=1.3.4
    scikit_learn>=1.0.1


[options.extras_require]
pretrained = 
    tensorflow>=2.7.0
    tensorflow_hub>=0.12.0
    tensorflow_text>=2.7.3

